--- a/app/src/main/res/layout/activity_dosdonts.xml
+++ b/app/src/main/res/layout/activity_dosdonts.xml
@@ -11,9 +11,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:layout_marginLeft="10dp"
-        android:text="Do 's :"
+        android:text="Do 's :✅"
         android:id="@+id/dosdonts"
-        android:textColor="#fa5757"
+        android:textColor="#57fa62"
         android:textStyle="bold"
         android:textSize="20sp" />
 
@@ -26,9 +26,178 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+		<ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="130dp"
+            android:id="@+id/img"
+        android:background="@drawable/e"
+        />
         <TextView
             android:layout_width="match_parent"
-            android:text="hi"
+            android:id="@+id/a"
+            android:layout_below="@id/img" 
+            android:text="
+>Repair deep plaster cracks in ceilings and foundations. Get expert advice if there are signs of structural defects."
+    android:layout_height="match_parent" />
+        <TextView
+            android:layout_width="match_parent"
+             android:layout_below="@id/a"
+			android:id="@+id/b"
+             
+            android:text="
+
+>Anchor overhead lighting fixtures to the ceiling."
+    android:layout_height="match_parent" />
+        <TextView
+            android:layout_width="match_parent"
+			android:layout_below="@id/b"
+			android:id="@+id/c"
+            android:text="
+>Follow BIS codes relevant to your area for building standards"
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+            android:layout_below="@id/c"
+			android:id="@+id/d"
+            android:text="
+
+>Fasten shelves securely to walls."
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+             android:layout_below="@id/d"
+			android:id="@+id/e"
+            android:text="
+
+>Place large or heavy objects on lower shelves."
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+	android:layout_below="@id/e"
+			android:id="@+id/f"
+            android:text="
+
+>Store breakable items such as bottled foods, glass, and china in low, closed cabinets with latches."
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+			android:layout_below="@id/f"
+			android:id="@+id/g"	
+            
+            android:text="
+
+>Hang heavy items such as pictures and mirrors away from beds, settees, and anywhere that people sit."
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+android:layout_below="@id/g"
+			android:id="@+id/h"
+             
+            android:text="
+>Brace overhead light and fan fixtures."
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+android:layout_below="@id/h"
+			android:id="@+id/i"
+             
+            android:text="
+
+>Repair defective electrical wiring and leaky gas connections. These are potential fire risks."
+        
+		    android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+android:layout_below="@id/i"
+			android:id="@+id/j"
+             
+            android:text="
+
+>Secure water heaters, LPG cylinders etc., by strapping them to the walls or bolting to the floor."
+    android:layout_height="match_parent" />
+        <TextView
+            android:layout_width="match_parent"
+android:layout_below="@id/j"
+			android:id="@+id/k"
+             
+            android:text="
+
+>Store weed killers, pesticides, and flammable products securely in closed cabinets with latches and on bottom shelves."    
+android:layout_height="match_parent" />
+        <TextView
+            android:layout_width="match_parent"
+android:layout_below="@id/k"
+			android:id="@+id/l"
+             
+            android:text="
+
+>Identify safe places indoors and outdoors.
+Under strong dining table, bed
+Against an inside wall
+"
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+            android:text="If Indoors"
+                android:textColor="#fa5757"
+                android:layout_below="@id/l"
+                android:id="@+id/text2"
+			android:textStyle="bold"
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+                android:layout_below="@id/text2"
+                android:id="@+id/text3"
+            android:text="
+>DROP to the ground; take COVER by getting under a sturdy table or other piece of furniture; and HOLD ON until the shaking stops.
+
+
+> If there is no a table or desk near you, cover your face and head with your arms and crouch in an inside corner of the building.
+
+
+>Protect yourself by staying under the lintel of an inner door, in the corner of a room, under a table or even under a bed.
+
+
+>Stay away from glass, windows, outside doors and walls, and anything that could fall, (such as lighting fixtures or furniture).
+
+
+>Stay in bed if you are there when the earthquake strikes. Hold on and protect your head with a pillow, unless you are under a heavy light fixture that could fall. In that case, move to the nearest safe place.
+
+
+>Use a doorway for shelter only if it is in close proximity to you and if you know it is a strongly supported, load bearing doorway.
+
+
+>Stay inside until the shaking stops and it is safe to go outside. Research has shown that most injuries occur when people inside buildings attempt to move to a different location inside the building or try to leave.
+
+
+>Be aware that the electricity may go out or the sprinkler systems or fire alarms may turn on."
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+            android:text="If Outdoors"
+			android:textStyle="bold"
+                android:layout_below="@id/text3"
+                android:id="@+id/text4"
+			android:textColor="#fa5757"
+            android:layout_height="match_parent" />
+			<TextView
+            android:layout_width="match_parent"
+                android:layout_below="@id/text4"
+                android:id="@+id/text5"
+            android:text="
+			>Do not move from where you are. 
+	
+	
+			>However, move away from buildings, trees, streetlights, and utility wires.
+	
+	
+			>If you are in open space, stay there until the shaking stops.
+	
+	
+			>The greatest danger exists directly outside buildings; at exits; and alongside exterior walls.
+
+			
+			>Most earthquake-related casualties result from collapsing walls, flying glass, and falling objects."
             android:layout_height="match_parent" />
     </RelativeLayout>
 </ScrollView>
@@ -37,7 +206,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dos"
         android:layout_marginLeft="10dp"
-        android:text="Dont 's :"
+        android:text="Dont 's :❌"
         android:id="@+id/donts"
         android:textColor="#fa5757"
         android:textStyle="bold"
@@ -52,8 +221,45 @@
             android:layout_height="match_parent">
         <TextView
             android:layout_width="match_parent"
-            android:text="hi"
-            android:layout_height="match_parent" />
+            android:id="@+id/m"
+			android:text="
+>DO NOT turn on the gas again if you turned it off;"
+android:layout_height="wrap_content" />
+			<TextView
+            android:layout_width="match_parent"
+			android:layout_below="@id/m"
+			android:id="@+id/n"
+            android:text="
+>let the gas company do it"
+android:layout_height="wrap_content" />
+<TextView
+            android:layout_width="match_parent"
+			android:layout_below="@id/n"
+			android:id="@+id/o"
+            android:text="
+>DO NOT use matches, lighters, camp stoves or barbecues, electrical equipment, appliances UNTIL you are sure there are no gas leaks. They may create a spark that could ignite leaking gas and cause an explosion and fire"
+android:layout_height="wrap_content" />
+			<TextView
+            android:layout_width="match_parent"
+			android:layout_below="@id/o"
+			android:id="@+id/p"
+            android:text="
+>DO NOT use your telephone, EXCEPT for a medical or fire emergency. You could tie up the lines needed for emergency response."
+android:layout_height="wrap_content" />
+			<TextView
+            android:layout_width="match_parent"
+			android:layout_below="@id/p"
+			android:id="@+id/q"
+            android:text="
+>If the phone doesn't work send someone for help"
+android:layout_height="wrap_content" />
+<TextView
+android:layout_below="@id/q"
+			android:id="@+id/r"
+            android:layout_width="match_parent"
+            android:text="
+>DO NOT expect firefighters, police or paramedics to help you. They may not be available."
+            android:layout_height="wrap_content" />
         </RelativeLayout>
     </ScrollView>
 </RelativeLayout>
